# ai-automation-platform

./: .gitignore  OBSERVABILITY_README.md  README.md  SCHEDULER_IMPLEMENTATION.md  STRIPE_BILLING_README.md  index.html  package-lock.json  package.json  tailwind.config.js
apps/aiops-bot/: .env.example  Makefile  README.md  pyproject.toml  tasks.yaml
apps/email-agent/: .env.example  Makefile  README.md  pyproject.toml  tasks.yaml
apps/rag-chat/: .env.example  Makefile  README.md  pyproject.toml  tasks.yaml
apps/rag-chat/app/: __init__.py  config.py  main.py  worker.py
apps/rag-chat/app/agents/: rag_agent.py
apps/rag-chat/app/models/: rag_models.py
apps/rag-chat/app/routers/: rag_router.py
apps/rag-chat/app/services/: rag_service.py
apps/rag-chat/app/tools/: rag_tools.py
apps/rag-chat/frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
apps/rag-chat/frontend/public/: index.html
apps/rag-chat/frontend/src/: App.jsx  index.css
apps/rag-chat/frontend/src/pages/: AuthCallback.jsx  Chat.jsx
apps/rag-chat/tests/: test_main.py
apps/scraper-agent/: .env.example  Makefile  README.md  pyproject.toml  tasks.yaml
apps/support-bot/: .env.example  Makefile  README.md  TESTING.md  pyproject.toml  tasks.yaml
infra/: DEPLOYMENT.md  docker-compose.yml
infra/aws-ecs/: Dockerfile  README.md  deploy.sh  service-definition.json  setup.sh  task-definition.json
infra/docker/: python.Dockerfile
infra/flyio/: Dockerfile  README.md  fly.toml
infra/frontend/: frontend.Dockerfile
infra/k8s/: deploy.yaml  (+2 more)
src/: App.jsx  index.css
(+74 files in other folders)
